--- a/settings.json
+++ b/settings.json
@@ -1,27 +1,380 @@
-{
-    "python.defaultInterpreterPath": "C:\\Users\\Leo\\AppData\\Local\\Microsoft\\WindowsApps\\python3.11.exe",
-    "redhat.telemetry.enabled": false,
-    "java.jdt.ls.java.home": "",
-    "github.copilot.editor.enableAutoCompletions": false,
-    "explorer.confirmDelete": false,
-    "files.autoSave": "afterDelay",
-    "security.workspace.trust.untrustedFiles": "open",
-    "git.confirmSync": false,
-    "chat.commandCenter.enabled": false,
-    "editor.minimap.enabled": false,
-    "workbench.colorTheme": "Catppuccin Mocha",
-    "debug.onTaskErrors": "debugAnyway",
-    "vim.smartRelativeLine": true,
-    "git.openRepositoryInParentFolders": "always",
-    "extensions.experimental.affinity": {
-        "asvetliakov.vscode-neovim": 1
-    },
-    "workbench.layoutControl.enabled": false,
+
     "window.menuBarVisibility": "compact",
+    "editor.fontFamily": "JetBrainsMono Nerd Font",
     "window.commandCenter": false,
-    "window.closeWhenEmpty": true,
-    "remote.SSH.remotePlatform": {
-        "shallot.cs.colostate.edu": "linux"
-    }
+    "workbench.layoutControl.enabled": false,
+    "editor.minimap.enabled": false,
+    "workbench.tips.enabled": false,
+    "workbench.editor.showTabs": "multiple",
+    "workbench.colorTheme": "Gruvbox Dark Medium",
+    "window.density.editorTabHeight": "compact",
+    "window.restoreWindows": "none",
+    "explorer.compactFolders": false,
+
+    "redhat.telemetry.enabled": false,
+    "github.copilot.enable": {
+        "*": false,
+        "plaintext": false,
+        "markdown": false,
+        "scminput": false
+    },
+    "git.openRepositoryInParentFolders": "always",
+
+    "workbench.startupEditor": "newUntitledFile",
+    "breadcrumbs.enabled": false,
     
+    "vim.useSystemClipboard": true,
+    "vim.hlsearch": true,
+    "editor.cursorSurroundingLines": 10,
+    "vim.smartRelativeLine": true,
+    "vim.highlightedyank.enable": true,
+    // which key settings
+    "vim.normalModeKeyBindingsNonRecursive": [
+        {
+            "before": [
+                "<space>"
+            ],
+            "commands": [
+                "whichkey.show"
+            ]
+        }
+    ],
+    "vim.visualModeKeyBindingsNonRecursive": [
+        {
+            "before": [
+                "<space>"
+            ],
+            "commands": [
+                "whichkey.show"
+            ]
+        }
+    ],
+    "whichkey.useFullWidthCharacters": true,
+    "whichkey.bindingOverrides": [
+    ],
+    "whichkey.bindings": [
+        {
+            "key": "/",
+            "name": "Comment line",
+            "type": "command",
+            "command": "workbench.action.commentLine",
+        },
+        {
+            "key": "e",
+            "name": "Open File [E]xplorer",
+            "type": "command",
+            "command": "runCommands",
+            "args": {
+                "commands": [
+                    "workbench.view.explorer",
+                    "workbench.explorer.fileView.focus"
+                ]
+            }
+        },
+        {
+            "key": "f",
+            "name": "[F]ind",
+            "type": "bindings",
+            "bindings": [
+                {
+                    "key": "c",
+                    "name": "[F]ind [C]ommands",
+                    "type": "command",
+                    "command": "workbench.action.showCommands",
+                },
+                {
+                    "key": "f",
+                    "name": "[F]ind [F]iles",
+                    "type": "command",
+                    "command": "workbench.action.quickOpen",
+                },
+                {
+                    "key": "b",
+                    "name": "[F]ind [B]uffer",
+                    "type": "command",
+                    "command": "workbench.action.showAllEditors",
+                },
+                {
+                    "key": ".",
+                    "name": "[F]ind Recent Files",
+                    "type": "command",
+                    "command": "workbench.action.openRecent",
+                },
+                {
+                    "key": "s",
+                    "name": "[F]ind [S]ymbols",
+                    "type": "command",
+                    "command": "workbench.action.gotoSymbol",
+                },
+                {
+                    "key": "e",
+                    "name": "[F]ind [E]rrors",
+                    "type": "command",
+                    "command": "workbench.actions.view.problems",
+                },
+            ],
+        },
+        {
+            "key": "c",
+            "name": "[C]ode",
+            "type": "bindings",
+            "bindings": [
+                {
+                    "key": "a",
+                    "name": "[C]ode [A]ctions",
+                    "type": "command",
+                    "command": "editor.action.quickFix",
+                },
+                {
+                    "key": "f",
+                    "name": "[C]ode [F]ormat",
+                    "type": "command",
+                    "command": "editor.action.format",
+                },
+                {
+                    "key": "h",
+                    "name": "[C]ode [H]over",
+                    "type": "command",
+                    "command": "editor.action.showHover",
+                },
+                {
+                    "key": "r",
+                    "name": "[C]ode [R]ename",
+                    "type": "command",
+                    "command": "editor.action.rename",
+                },
+                {
+                    "key": "i",
+                    "name": "[C]ode Organize [I]mports",
+                    "type": "command",
+                    "command": "editor.action.organizeImports",
+                },
+                {
+                    "key": "R",
+                    "name": "[C]ode [R]un",
+                    "type": "command",
+                    "command": "editor.action.organizeImports",
+                },
+            ],
+        },
+        {
+            "key": "d",
+            "name": "[D]ebug",
+            "type": "bindings",
+            "bindings": [
+                {
+                    "key": "t",
+                    "name": "[D]ebug [T]oggle Breakboint",
+                    "type": "command",
+                    "command": "editor.debug.action.toggleBreakpoint",
+                },
+                {
+                    "key": "e",
+                    "name": "[D]ebug [E]dit Breakboint",
+                    "type": "command",
+                    "command": "editor.debug.action.editBreakpoint",
+                },
+                {
+                    "key": "c",
+                    "name": "[D]ebug [C]ontinue",
+                    "type": "command",
+                    "command": "workbench.action.debug.continue",
+                },
+                {
+                    "key": "o",
+                    "name": "[D]ebug Step [o]ver",
+                    "type": "command",
+                    "command": "workbench.action.debug.stepOver",
+                },
+                {
+                    "key": "i",
+                    "name": "[D]ebug Step [I]nto",
+                    "type": "command",
+                    "command": "workbench.action.debug.stepInto",
+                },
+                {
+                    "key": "O",
+                    "name": "[D]ebug Step [O]ut",
+                    "type": "command",
+                    "command": "workbench.action.debug.stepOut",
+                },
+                {
+                    "key": "s",
+                    "name": "[D]ebug [S]top",
+                    "type": "command",
+                    "command": "runCommands",
+                    "args": {
+                        "commands": [
+                            "workbench.action.debug.stop",
+                            "workbench.action.closeSidebar",
+                            "workbench.action.terminal.killAll"
+                        ]
+                    }
+                },
+                {
+                    "key": "r",
+                    "name": "[D]ebug [R]un",
+                    "type": "command",
+                    "command": "runCommands",
+                    "args": {
+                        "commands": [
+                            "workbench.action.debug.start",
+                            "workbench.view.debug"
+                        ]
+                    }
+                },
+            ]
+        },
+        {
+            "key": "t",
+            "name": "[T]ests",
+            "type": "bindings",
+            "bindings": [
+                {
+                    "key": "t",
+                    "name": "[T]ab [T]erminal",
+                    "type": "command",
+                    "command": "workbench.action.terminal.toggleTerminal",
+                },
+                {
+                    "key": "f",
+                    "name": "[T]est Run [F]ile",
+                    "type": "command",
+                    "command": "runCommands",
+                    "args": {
+                        "commands": [
+                            "testing.runCurrentFile",
+                            "testing.showMostRecentOutput"
+                        ]
+                    }
+                },
+                {
+                    "key": "a",
+                    "name": "[T]est Run [A]ll",
+                    "type": "command",
+                    "command": "runCommands",
+                    "args": {
+                        "commands": [
+                            "testing.runAll",
+                            "testing.showMostRecentOutput"
+                        ]
+                    }
+                },
+                {
+                    "key": "c",
+                    "name": "[T]est Run [C]ursor",
+                    "type": "command",
+                    "command": "runCommands",
+                    "args": {
+                        "commands": [
+                            "testing.runAtCursor",
+                            "testing.showMostRecentOutput"
+                        ]
+                    }
+                },
+                {
+                    "key": "r",
+                    "name": "[T]est [R]esults",
+                    "type": "command",
+                    "command": "testing.showMostRecentOutput",
+                },
+            ]
+        },
+        {
+            "key": "o",
+            "name": "[O]pen",
+            "type": "bindings",
+            "bindings": [
+                {
+                    "key": "f",
+                    "name": "[O]pen [f]ile",
+                    "type": "command",
+                    "command": "workbench.action.files.openFile",
+                },
+                {
+                    "key": "F",
+                    "name": "[O]pen [F]older",
+                    "type": "command",
+                    "command": "workbench.action.files.openFolder",
+                },
+            ]
+        },
+        {
+            "key": "a",
+            "name": "[A]i",
+            "type": "bindings",
+            "bindings": [
+                {
+                    "key": "i",
+                    "name": "[A][I] edits",
+                    "type": "command",
+                    "command": "workbench.action.quickchat.launchInlineChat",
+                },
+            ]
+        },
+        {
+            "key": "b",
+            "name": "[B]uffers",
+            "type": "bindings",
+            "bindings": [
+                {
+                    "key": "D",
+                    "name": "[B]uffer [d]elete",
+                    "type": "command",
+                    "command": "workbench.action.closeActiveEditor",
+                },
+            ]
+        },
+        {
+            "key": "v",
+            "name": "[V]iew",
+            "type": "bindings",
+            "bindings": [
+                {
+                    "key": "b",
+                    "name": "[V]iew Activity [B]ars",
+                    "type": "command",
+                    "command": "runCommands",
+                    "args": {
+                        "commands": [
+                            "workbench.action.toggleActivityBarVisibility",
+                            "workbench.action.toggleStatusbarVisibility"
+                        ]
+                    }
+                },
+            ]
+        },
+        {
+           
+            "key": "g",
+            "name": "[G]oto",
+            "type": "bindings",
+            "bindings": [
+                {
+                    "key": "d",
+                    "name": "[G]oto [d]efinition",
+                    "type": "command",
+                    "command": "editor.revealDefinition",
+                },
+                {
+                    "key": "r",
+                    "name": "[G]oto [R]eferences",
+                    "type": "command",
+                    "command": "editor.action.goToReferences",
+                },
+                {
+                    "key": "i",
+                    "name": "[G]oto [I]mplementation",
+                    "type": "command",
+                    "command": "editor.action.goToImplementation",
+                },
+                {
+                    "key": "D",
+                    "name": "[G]oto [D]eclaration",
+                    "type": "command",
+                    "command": "editor.action.revealDeclaration",
+                },
+            ],
+        },
+    ],
 }
