Update settings.json open-folder
extension open-folder

--- a/settings.json
+++ b/settings.json
@@ -295,7 +295,7 @@
                     "key": "F",
                     "name": "[O]pen [F]older",
                     "type": "command",
-                    "command": "extension.quickOpenPath"
+                    "command": "open-folder.open"
                 },
             ]
         },
